Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/Fg_ri3152/Source/RI3151.H

ViStatus _VI_FUNC ri3151_sine_wave (ViSession instrHandle, ViReal64 frequency,
                                    ViReal64 amplitude, ViReal64 offset, 
                                    ViInt16 phase, ViInt16 powerSinex);
ViStatus _VI_FUNC ri3151_triangular_wave (ViSession instrHandle, ViReal64 frequency,
                                          ViReal64 amplitude, ViReal64 offset, 
                                          ViInt16 phase, ViInt16 powerTriangularx);
ViStatus _VI_FUNC ri3151_square_wave (ViSession instrHandle, ViReal64 frequency,
                                      ViReal64 amplitude, ViReal64 offset, 
                                      ViInt16 duty_cycle);
ViStatus _VI_FUNC ri3151_pulse_wave (ViSession instrHandle, ViReal64 frequency,
                                      ViReal64 amplitude, ViReal64 offset, 
                                      ViReal64 delay, ViReal64 rise_time, 
                                      ViReal64 high_time, ViReal64 fall_time);
ViStatus _VI_FUNC ri3151_ramp_wave (ViSession instrHandle, ViReal64 frequency,
                                      ViReal64 amplitude, ViReal64 offset, 
                                      ViReal64 delay, ViReal64 rise_time, 
                                      ViReal64 fall_time);
ViStatus _VI_FUNC ri3151_sinc_wave (ViSession instrHandle, ViReal64 frequency,
                                      ViReal64 amplitude, ViReal64 offset, 
                                      ViInt16 cycle_number);
ViStatus _VI_FUNC ri3151_gaussian_wave (ViSession instrHandle, ViReal64 frequency,
                                        ViReal64 amplitude, ViReal64 offset, 
                                        ViInt16 exponent);
ViStatus _VI_FUNC ri3151_exponential_wave (ViSession instrHandle, ViReal64 frequency,
                                      ViReal64 amplitude, ViReal64 offset, 
                                      ViReal64 exponent);
ViStatus _VI_FUNC ri3151_dc_signal (ViSession instrHandle, ViInt16 percent_amplitude);
/*---------------------------------------- Arbitrary Waveforms --------------------------------*/

ViStatus _VI_FUNC ri3151_define_arb_segment (ViSession instrHandle, ViInt16 segment_number,
                                            ViInt32 segment_size);
ViStatus _VI_FUNC ri3151_delete_segments (ViSession instrHandle, ViInt16 segment_number,
                                            ViBoolean delete_all_segments);
ViStatus _VI_FUNC ri3151_load_arb_data (ViSession instrHandle, ViInt16 segment_number,
											ViUInt16 *data_pts, ViInt32 number_of_points);
ViStatus _VI_FUNC ri3151_load_and_shift_arb_data (ViSession instrHandle,
                                                  ViInt16 segmentNumber,
                                                  ViInt16 dataPointArray[],
                                                  ViInt32 numberofPoints);
ViStatus _VI_FUNC ri3151_load_ascii_file (ViSession instrHandle, ViInt16 segment_number,
											ViString file_name, ViInt32 number_of_points);
ViStatus _VI_FUNC ri3151_load_wavecad_file (ViSession instrHandle, ViChar waveCADFileName[]);
ViStatus _VI_FUNC ri3151_load_wavecad_wave_file (ViSession instrHandle,
                                        		 ViInt16 segmentNumber,
                                        		 ViChar waveCADWaveformFileName[]);
ViStatus _VI_FUNC ri3151_output_arb_waveform (ViSession instrHandle, ViInt16 segment_number,
                                              ViReal64 sampling_clock, ViReal64 amplitude,
                                              ViReal64 offset, ViInt16 clock_source);
/*----------------------------------------------------------------------------------------------*/


/*----------------------------------------- Sequence Waveforms ---------------------------------*/


ViStatus _VI_FUNC ri3151_define_sequence (ViSession instrHandle,
                                                  ViInt16 number_of_steps,
                                                  ViInt16 *segment_number,
                                                  ViInt32 *repeat_number);
ViStatus _VI_FUNC ri3151_delete_sequence (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_output_sequence_waveform (ViSession instrHandle,
                                                    ViReal64 sampling_clock,
                                                    ViReal64 amplitude,
                                                    ViReal64 offset,
                                                    ViBoolean sequence_mode);
/*----------------------------------------------------------------------------------------------*/

/*---------------------------------- Example ---------------------------------------------------*/

ViStatus _VI_FUNC ri3151_example_generate_seq_waveform (ViSession instrHandle);
/*----------------------------------------------------------------------------------------------*/

ViStatus _VI_FUNC ri3151_filter (ViSession instrHandle, ViInt16 lp_filter);
ViStatus _VI_FUNC ri3151_amplitude_modulation (ViSession instrHandle, ViInt16 percent_amplitude,
                                                ViInt32 internal_frequency);
ViStatus _VI_FUNC ri3151_output (ViSession instrHandle, ViBoolean output_switch);
ViStatus _VI_FUNC ri3151_operating_mode (ViSession instrHandle, ViInt16 operating_mode);
ViStatus _VI_FUNC ri3151_select_waveform_mode (ViSession instrHandle, ViInt16 waveform_type);
ViStatus _VI_FUNC ri3151_set_frequency (ViSession instrHandle, ViReal64 frequency);
ViStatus _VI_FUNC ri3151_set_amplitude (ViSession instrHandle, ViReal64 amplitude);
ViStatus _VI_FUNC ri3151_set_offset (ViSession instrHandle, ViReal64 offset);
ViStatus _VI_FUNC ri3151_trigger_source (ViSession instrHandle, ViInt16 triggerSource);
ViStatus _VI_FUNC ri3151_trigger_rate (ViSession instrHandle, ViReal64 triggerRate);
ViStatus _VI_FUNC ri3151_trigger_slope (ViSession instrHandle, ViBoolean triggerSlope);
ViStatus _VI_FUNC ri3151_trigger_delay (ViSession instrHandle, ViInt32 triggerDelay);
ViStatus _VI_FUNC ri3151_output_trigger (ViSession instrHandle, ViInt16 outputTriggerSource,
                                         ViInt16 outputTriggerLine, ViInt32 BITTriggerPoint,
                                         ViInt16 LCOMSegment);
ViStatus _VI_FUNC ri3151_output_sync (ViSession instrHandle, ViInt16 SYNCPulseSource,
                                      ViInt32 BITSYNCPoint, ViInt16 LCOMSegment);
ViStatus _VI_FUNC ri3151_immediate_trigger (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_phase_master (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_phase_slave (ViSession instrHandle, ViInt16 phaseOffset);
ViStatus _VI_FUNC ri3151_phase_lock_loop (ViSession instrHandle, ViBoolean phaseLockLoop);
ViStatus _VI_FUNC ri3151_pll_phase (ViSession instrHandle, ViReal64 phase);
ViStatus _VI_FUNC ri3151_pll_fine_phase(ViSession instrHandle, ViReal64 phase);
ViStatus _VI_FUNC ri3151_burst_mode (ViSession instrHandle, ViInt32 number_of_cycles);
ViStatus _VI_FUNC ri3151_status_query (ViSession vi, ViReal64 *voltage_value,
                                       ViReal64 *frequency_value, ViReal64 *offset_value,
                                       ViInt16 *filter_type);
ViStatus _VI_FUNC ri3151_mode_query (ViSession instrHandle, ViInt16 *presentWaveformMode,
                            ViInt16 *presentStandardWaveform);
ViStatus _VI_FUNC ri3151_pll_query (ViSession instrHandle, ViBoolean *phaseLockState,
                           ViReal64 *coarsePhase, ViReal64 *finePhase, ViReal64 *extFrequency);
ViStatus _VI_FUNC ri3151_clear (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_trigger (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_poll (ViSession instrHandle, ViInt16 *statusByte);
ViStatus _VI_FUNC ri3151_reset (ViSession instrHandle);
ViStatus _VI_FUNC ri3151_read_status_byte (ViSession instrHandle, ViInt16 *statusByte);
ViStatus _VI_FUNC ri3151_set_SRE (ViSession instrHandle, ViInt16 SRERegister);
ViStatus _VI_FUNC ri3151_read_SRE (ViSession instrHandle, ViInt16 *SRERegister);
ViStatus _VI_FUNC ri3151_read_ESR (ViSession instrHandle, ViInt16 *ESRRegister);
ViStatus _VI_FUNC ri3151_set_ESE (ViSession instrHandle, ViInt16 ESERegister);
ViStatus _VI_FUNC ri3151_read_ESE (ViSession instrHandle, ViInt16 *ESERegister);
ViStatus _VI_FUNC ri3151_self_test (ViSession instrHandle, ViInt16 *passFail,
                           ViChar selfTestMessage[]);
ViStatus _VI_FUNC ri3151_revision_query (ViSession instrHandle, ViString driverRevision,
                                ViString firmwareRevision);
ViStatus _VI_FUNC ri3151_error_query (ViSession instrHandle, ViInt32 *error,
                             ViString errorMessage);
ViStatus _VI_FUNC ri3151_error_message (ViSession instrHandle, ViStatus errorReturnValue,
                               ViString errorMessage);
ViStatus _VI_FUNC ri3151_close (ViSession instrHandle);