Source/ISS/Development/SAIS/SAIS_Devices/Fg_Ri3152B/Source/RI3151.vb


    Declare Function ri3151_sine_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal phase As Short, ByVal powerSinex As Short) As Integer
    Declare Function ri3151_triangular_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal phase As Short, ByVal powerTriangle As Short) As Integer
    Declare Function ri3151_square_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal dutyCycle As Short) As Integer
    Declare Function ri3151_pulse_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal delay As Double, ByVal rise_time As Double, ByVal high_time As Double, ByVal fall_time As Double) As Integer
    Declare Function ri3151_ramp_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal delay As Double, ByVal rise_time As Double, ByVal fall_time As Double) As Integer
    Declare Function ri3151_sinc_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal cycle_number As Short) As Integer
    Declare Function ri3151_gaussian_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal exponent As Short) As Integer
    Declare Function ri3151_exponential_wave Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal exponent As Double) As Integer
    Declare Function ri3151_dc_signal Lib "ri3151.dll" (ByVal vi As Integer, ByVal pct_amplitude As Short) As Integer
    Declare Function ri3151_define_arb_segment Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByVal segment_size As Integer) As Integer
    Declare Function ri3151_delete_segments Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByVal delete_all_segments As Short) As Integer
    Declare Function ri3151_load_arb_data Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByRef data_points As Short, ByVal number_of_points As Integer) As Integer
    Declare Function ri3151_load_and_shift_arb_data Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByRef data_points As Short, ByVal number_of_points As Integer) As Integer
    Declare Function ri3151_load_ascii_file Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByVal file_name As String, ByVal number_of_points As Integer) As Integer
    Declare Function ri3151_load_wavecad_file Lib "ri3151.dll" (ByVal vi As Integer, ByVal waveCAD_file_name As String) As Integer
    Declare Function ri3151_load_wavecad_wave_file Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByVal waveCAD_wave_file_name As String) As Integer
    Declare Function ri3151_output_arb_waveform Lib "ri3151.dll" (ByVal vi As Integer, ByVal segment As Short, ByVal sample_clk_freq As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal clock_source As Short) As Integer
    Declare Function ri3151_define_sequence Lib "ri3151.dll" (ByVal vi As Integer, ByVal number_of_steps As Short, ByRef segment_array As Short, ByRef repeat_array As Integer) As Integer
    Declare Function ri3151_delete_sequence Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_output_sequence_waveform Lib "ri3151.dll" (ByVal vi As Integer, ByVal sample_clk_freq As Double, ByVal amplitude As Double, ByVal offset As Double, ByVal sequence_mode As Short) As Integer
    Declare Function ri3151_example_generate_seq_waveform Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_filter Lib "ri3151.dll" (ByVal vi As Integer, ByVal filter As Short) As Integer
    Declare Function ri3151_amplitude_modulation Lib "ri3151.dll" (ByVal vi As Integer, ByVal pct_amplitude As Short, ByVal internal_frequency As Integer) As Integer
    Declare Function ri3151_output Lib "ri3151.dll" (ByVal vi As Integer, ByVal output_on_off As Short) As Integer
    Declare Function ri3151_operating_mode Lib "ri3151.dll" (ByVal vi As Integer, ByVal operating_mode As Short) As Integer
    Declare Function ri3151_select_waveform_mode Lib "ri3151.dll" (ByVal vi As Integer, ByVal waveform_type As Short) As Integer
    Declare Function ri3151_set_frequency Lib "ri3151.dll" (ByVal vi As Integer, ByVal frequency As Double) As Integer
    Declare Function ri3151_set_amplitude Lib "ri3151.dll" (ByVal vi As Integer, ByVal amplitude As Double) As Integer
    Declare Function ri3151_set_offset Lib "ri3151.dll" (ByVal vi As Integer, ByVal offset As Double) As Integer
    Declare Function ri3151_trigger_source Lib "ri3151.dll" (ByVal vi As Integer, ByVal trigger_source As Short) As Integer
    Declare Function ri3151_trigger_rate Lib "ri3151.dll" (ByVal vi As Integer, ByVal trigger_rate As Double) As Integer
    Declare Function ri3151_trigger_slope Lib "ri3151.dll" (ByVal vi As Integer, ByVal trigger_slope As Short) As Integer
    Declare Function ri3151_trigger_delay Lib "ri3151.dll" (ByVal vi As Integer, ByVal trigger_delay As Integer) As Integer
    Declare Function ri3151_output_trigger Lib "ri3151.dll" (ByVal vi As Integer, ByVal out_trigger_src As Short, ByVal out_trigger_line As Short, ByVal BITTriggerPoint As Integer, ByVal LCOMSegment As Short) As Integer
    Declare Function ri3151_output_sync Lib "ri3151.dll" (ByVal vi As Integer, ByVal SYNCPulseSource As Short, ByVal BITSYNCPoint As Integer, ByVal LCOMSegment As Short) As Integer
    Declare Function ri3151_immediate_trigger Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_phase_master Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_phase_slave Lib "ri3151.dll" (ByVal vi As Integer, ByVal phase_offset As Short) As Integer
    Declare Function ri3151_phase_lock_loop Lib "ri3151.dll" (ByVal vi As Integer, ByVal phaseLockLoop As Double) As Integer
    Declare Function ri3151_pll_phase Lib "ri3151.dll" (ByVal vi As Integer, ByVal phase As Double) As Integer
    Declare Function ri3151_pll_fine_phase Lib "ri3151.dll" (ByVal vi As Integer, ByVal phase As Short) As Integer
    Declare Function ri3151_burst_mode Lib "ri3151.dll" (ByVal vi As Integer, ByVal number_of_cycles As Integer) As Integer
    Declare Function ri3151_status_query Lib "ri3151.dll" (ByVal vi As Integer, ByRef amplitude As Double, ByRef frequency As Double, ByRef offset As Double, ByRef filter_type As Short) As Integer
    Declare Function ri3151_mode_query Lib "ri3151.dll" (ByVal vi As Integer, ByRef presentWaveformMode As Short, ByRef presentStandardWaveform As Short) As Integer
    Declare Function ri3151_pll_query Lib "ri3151.dll" (ByVal vi As Integer, ByRef phaseLockState As Short, ByRef coarsePhase As Double, ByRef finePhase As Double, ByRef extFrequency As Double) As Integer
    Declare Function ri3151_clear Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_trigger Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_poll Lib "ri3151.dll" (ByVal vi As Integer, ByRef status_byte As Short) As Integer
    Declare Function ri3151_reset Lib "ri3151.dll" (ByVal vi As Integer) As Integer
    Declare Function ri3151_read_status_byte Lib "ri3151.dll" (ByVal vi As Integer, ByRef status_byte As Short) As Integer
    Declare Function ri3151_set_SRE Lib "ri3151.dll" (ByVal vi As Integer, ByVal SRE_register As Short) As Integer
    Declare Function ri3151_read_SRE Lib "ri3151.dll" (ByVal vi As Integer, ByRef SRE_register As Short) As Integer
    Declare Function ri3151_read_ESR Lib "ri3151.dll" (ByVal vi As Integer, ByRef ESR_register As Short) As Integer
    Declare Function ri3151_set_ESE Lib "ri3151.dll" (ByVal vi As Integer, ByVal ESE_register As Short) As Integer
    Declare Function ri3151_read_ESE Lib "ri3151.dll" (ByVal vi As Integer, ByRef ESE_register As Short) As Integer
    Declare Function ri3151_self_test Lib "ri3151.dll" (ByVal vi As Integer, ByRef test_result As Integer, ByRef test_message As String) As Integer
    Declare Function ri3151_revision_query Lib "ri3151.dll" (ByVal vi As Integer, ByRef driver_rev As String, ByRef firmware_rev As String) As Integer
    Declare Function ri3151_error_query Lib "ri3151.dll" (ByVal vi As Integer, ByRef error_code As Short, ByRef error_message As String) As Integer
    Declare Function ri3151_error_message Lib "ri3151.dll" (ByVal vi As Integer, ByVal error_code As Integer, ByRef message As String) As Integer
    Declare Function ri3151_close Lib "ri3151.dll" (ByVal vi As Integer) As Integer


End Module